<resources>
    <string name="app_name">Football</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="football">Football</string>
    <string name="welcome">This is a simple mobile application to display latest results from bundesliga
            games. The data is obtained from OpenLigaDB. OpenLigaDB provides latest game scores and
            league standings.</string>
    <string name="ranking">Ranking</string>
    <string name="game_results">Game Results</string>
    <string name="quiz">Quiz</string>
    <string name="fc_nurnberg">FC Nurnberg</string>
    <string name="spieltag">Spieltag</string>
    <string name="one">1</string>
    <string name="colon">:</string>
    <string name="bayern_munchen">Bayern Munchen</string>
    <string name="test">How did the last game end? Test your knowledge!</string>
    <string name="enter_score">Enter Score</string>
    <string name="a_date">March 19, 1993</string>
    <string name="resolve">Resolve</string>
    <string name="reset">Reset</string>
    <string name="resolve_clicked">Resolve Clicked</string>
    <string name="versus">vs</string>
    <string name="richtig">Richtig</string>
    <string name="falsch">Falsch</string>
    <string name="reset_clicked">Reset Clicked</string>
    <string name="data_resetted">Data Reset Complete</string>
    <string name="standings">League Tables</string>
    <string name="dummy_score">1 : 1</string>
    <string name="dummy_match_start">Match Start: 19.03.1993 04:00 Uhr</string>
    <string name="dummy_stadium">Stadium: Allianz Arena</string>
    <string name="dummy_audience">Audience: 75000</string>
    <string name="dummy_scorer">Ajay</string>
    <string name="dummy_time">12. min</string>
    <string name="dot">.</string>
    <string name="min">min</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="stadium">Stadium:</string>
    <string name="audience">Audience:</string>
    <string name="uhr">Uhr</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="match_start">Match Start:</string>
    <string name="comma">,</string>
    <string name="match_details">Match Details</string>
    <string name="half_time">Halbzeitergebnis</string>
    <string name="not_available">Not Available</string>

    <string-array name="teamlist">
        <item>Bayern Munchen</item>
        <item>Borussia Dortmund</item>
        <item>Bayer 04 Leverkusen</item>
        <item>Eintracht Frankfurt</item>
        <item>SC Freiburg</item>
        <item>Hamburger SV</item>
        <item>Hannover 96</item>
        <item>FC Schalke 04</item>
        <item>1. FSV Mainz 05</item>
        <item>Borussia Monchengladbach</item>
        <item>Vfb Suttgart</item>
        <item>Werder Bremen</item>
        <item>Fortuna Dusseldorf</item>
        <item>1. FC Nurnberg</item>
        <item>Vfs Wolfsburg</item>
        <item>FC Augsburg</item>
        <item>TSG 1899 Hoffenheim</item>
        <item>SpVgg Greuther Fuerth</item>
    </string-array>
</resources>
